Show empty configurations screen when there are no environments configured

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: #f8f9fa;
     min-width: 350px;
     padding: 30px 15px;
     font-family: sans-serif;
