--- a/src/corner_button/corner_button.css
+++ b/src/corner_button/corner_button.css
@@ -2,15 +2,16 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 4em;
-    height: 4em;
+    width: 6.5em;
+    height: 4.5em;
+    z-index: 5;
 }
 
 .corner i {
     color: #fff;
     position: relative;
-    top: 0.5em;
-    left: 2.25em;
+    top: .55em;
+    left: 3em;
 }
 
 .corner:after {
@@ -18,8 +19,8 @@
     content: "";
     top: 0;
     right: 0;
-    border-right: 4em solid transparent;
-    border-bottom: 4em solid transparent;
+    border-right: 6.5em solid transparent;
+    border-bottom: 4.5em solid transparent;
     border-right-color: #5755d9;
     z-index: -1;
 }
