--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,24 @@ body {
     font-family: sans-serif;
 }
 
+body::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f1f1fc;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: darkgrey;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #f1f1fc;
+}
+
 .env-config-list .tile {
     margin: .7rem;
     max-width: 180px;
