--- a/src/search_page/seller_tile.css
+++ b/src/search_page/seller_tile.css
@@ -12,7 +12,7 @@
 .seller-list::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #5755d9;
+    background-color: darkgrey;
 }
 
 .seller-list::-webkit-scrollbar-track {
