--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
     font-family: sans-serif;
 }
 
+h3 .btn {
+    padding: 0;
+    font-size: 1.3rem;
+    margin-left: 8px;
+}
+
 .search-page {
     min-width: 410px;
 }
@@ -26,6 +32,14 @@ body::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
     background-color: #f1f1fc;
+}
+
+.tooltip:focus::after {
+    opacity: 0;
+}
+
+.tooltip:hover::after {
+    opacity: 1;
 }
 
 .env-config-list .tile {
