Add checkout link for sellers

--- a/src/search_page/seller_tile.css
+++ b/src/search_page/seller_tile.css
@@ -30,6 +30,10 @@
     text-decoration: none;
 }
 
-.admin-app-link a:active, .admin-app-link a:hover {
+.app-links a+a {
+    margin-left: 5px;
+}
+
+.app-links a:active, .app-links a:hover, .app-links a:active {
     text-decoration: underline;
 }
